created a line graph with angular

--- a/app/dot_plot/dotPlotControls.html
+++ b/app/dot_plot/dotPlotControls.html
@@ -29,14 +29,14 @@
 
     <div class='xRangeSelector'>
         <div class='xRangeLabel'>X Range</div>
-        <input class='xRangeMin' type='text' ng-model="plotSpec.xRange.min">
-        <input class='xRangeMax' type='text' ng-model="plotSpec.xRange.max">
+        <input class='xRangeMin' type='number' ng-model="plotSpec.xRange.min">
+        <input class='xRangeMax' type='number' ng-model="plotSpec.xRange.max">
     </div>
 
     <div class='yRangeSelector'>
         <div class='yRangeLabel'>Y Range</div>
-        <input class='yRangeMin' type='text' ng-model="plotSpec.yRange.min">
-        <input class='yRangeMax' type='text' ng-model="plotSpec.yRange.max">
+        <input class='yRangeMin' type='number' ng-model="plotSpec.yRange.min">
+        <input class='yRangeMax' type='number' ng-model="plotSpec.yRange.max">
     </div>
 
 
