--- a/app/plot_corral/plotCorral.html
+++ b/app/plot_corral/plotCorral.html
@@ -2,4 +2,5 @@
 <div class="createButtons">
     <button ng-click="this.renderHistogram();" ng-hide="plotShowing">H</button>
     <button ng-click="this.renderDotPlot();" ng-hide="plotShowing">D</button>
+    <button ng-click="this.renderLinePlot();" ng-hide="plotShowing">L</button>
 </div>
